--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
+// Disable schema validation if needed
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "src",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,           
-    "strict": true,                                     
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "outDir": "./dist"
+    "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*.ts",
-    ".api"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", ".api/*"]
 }
+
 
     
